--- a/errata.tex
+++ b/errata.tex
@@ -24,6 +24,8 @@
 
 \item Page 114, Exercise 3.5 part (c). This should read ``\ldots, then $f[A] \in V_\w$.'' instead of ``\ldots, then $f[X] \in V_\w$.'' since $X$ has not been previously defined. (Unconfirmed)
 
+\item Page 140, bottom. The reference to Assumption~1.7 in Chapter~4 should really be Assumption~1.8. (Unconfirmed)
+
 \end{enumerate}
 
 \end{document}
