-FINALLY finished Exercise 7.2.4.1 -Added Python script and tex file to summarize existing Lemmas/Corollaries for easy reference -Added "Main Problem" definition for uniform and easily-changeable labels. Also made these red instead of blue for fun.

--- a/Ch5.tex
+++ b/Ch5.tex
@@ -525,7 +525,7 @@
         Hence $f$ is a bijection from $\nats$ onto a proper subset $N$ so that by definition $\nats$ is Dedekind infinite. \qedsymbol
     }
 
-    \emph{Main Problem.}
+    \mainprob
     
 	Suppose that $X$ is a countable set.
     Then by definition $X$ is equipotent to $\nats$.
@@ -669,7 +669,7 @@
         Hence since $g$ is bijective $|B| = n$ as desired. \qedsymbol
     }
 
-    \emph{Main Problem.}
+    \mainprob
     
     Suppose that $A$ is infinite.
     Then for any $n \in \nats$ define
@@ -831,7 +831,7 @@
         as desired. \qedsymbol
     }
 
-    \emph{Main Problem}
+    \mainprob
 
 	First we note that clearly since $\N \leq \NI$ we have
     $$
@@ -890,7 +890,7 @@
         Hence by the Cantor-Bernstein Theorem $|B-A| = \NII$ as desired. \qedsymbol
     }
 
-    \emph{Main Problem}
+    \mainprob
 
     By Lemma~5.2.7 $|\reals^\reals| = \NII$.
     Also by Theorem~5.2.6a the set $C$ of all continuous $f: \reals \to \reals$ has cardinality of $\NI$.
