--- a/macros.tex
+++ b/macros.tex
@@ -60,6 +60,7 @@
 \def\pss{\subset}
 \def\Seq{\mathrm{Seq}}
 
+% Environment shortcuts
 \newcommand\gath[1]{\begin{gather*} #1 \end{gather*}}
 \newcommand\ali[1]{\begin{align*} #1 \end{align*}}
 
@@ -78,4 +79,6 @@
 }{
     \end{adjustwidth}
 }
-    
+
+% Main problem label
+\def\mainprob{{\color{red}\emph{Main Problem.}}}
