--- a/Ch7.tex
+++ b/Ch7.tex
@@ -69,7 +69,7 @@
         so that clearly $(A, R)$ is isomorphic to $(\a+1, <)$. \qedsymbol
       }
 
-      \emph{Main Problem.}
+      \mainprob
 
       For an infinite well-orderable set $X$ we show that $X$ has an infinite number of non-isomorphic well-orderings.
       So let $\prec$ be a well-ordering of $X$ so that by Theorem~6.3.1 $(X, \prec)$ is isomorphic to some ordinal $\a$.
@@ -111,11 +111,11 @@
   Clearly both $0$ and $1$ are both at most countable so in the following we assume that $\a \neq 0$.
 
   \def\seqab{\Seq(\a \cdot \b)}
-  \def\sab{S(\a, \b)}
-  Now, let $\seqab$ be the set of all finite sequences of elements of $\a \cdot \b$, and $\sab$ be the set as defined in Exercise~6.5.16 such that $\sab$ with the order defined there is isomorphic (and therefore equipotent) to $\a^\b$.
-  We shall construct a function $g: \sab \to \seqab$.
+  \def\sba{S(\b, \a)}
+  Now, let $\seqab$ be the set of all finite sequences of elements of $\a \cdot \b$, and $\sba$ be the set as defined in Exercise~6.5.16 such that $\sba$ with the order defined there is isomorphic (and therefore equipotent) to $\a^\b$.
+  We shall construct a function $g: \sba \to \seqab$.
 
-  So consider any $f \in \sab$ so that $f:\b \to \a$ and $s(f) = \braces{\x < \b \where f(\x) \neq 0}$ (as defined in the exercise) is finite.
+  So consider any $f \in \sba$ so that $f:\b \to \a$ and $s(f) = \braces{\x < \b \where f(\x) \neq 0}$ (as defined in the exercise) is finite.
   Hence there is a natural number $n$ such that $s(f)$ can be expressed as an increasing sequence $h: n \to s(f)$.
   We now define another sequence $t: n \to \a \cdot \b$ by
   $$
@@ -124,7 +124,7 @@
   for $k \in n$.
   We then set $g(f) = t$.
 
-  The first thing we show is that $g(f)$ is really a sequence whose elements are in $\a \cdot \b$ for any $f \in \sab$.
+  The first thing we show is that $g(f)$ is really a sequence whose elements are in $\a \cdot \b$ for any $f \in \sba$.
   Hence for any such $f$ again let $h$ be the increasing finite sequence whose range is $s(f)$ and let $t = g(f)$.
   Then for any $k \in n$ we we note that $h(k) < \b$ since $h(k) \in s(f)$ so that $h(k) + 1 \leq \b$.
   We also note that $f(h(k)) \in \a$ since $f: \b \to \a$ so that $f(h(k)) < \a$.
@@ -139,7 +139,7 @@
   Thus $t: n \to \a \cdot \b$ and since clearly this sequence is finite it follows that $t \in \seqab$.
 
   Now we show that $g$ is injective.
-  So consider $f_1$ and $f_2$ in $\sab$ such that $f_1 \neq f_2$.
+  So consider $f_1$ and $f_2$ in $\sba$ such that $f_1 \neq f_2$.
   Let $h_1$, $n_1$ and $h_2$, $n_2$ be the increasing sequences and natural numbers for $f_1$ and $f_2$, respectively, as defined above.
   Also let $t_1 = g(f_1)$ and $t_2 = g(f_2)$.
 
@@ -190,10 +190,10 @@
   The final sub-case in which $k_1 > k_2$ is analagous.
   
   Hence in all cases and sub-cases $g(f_1) = t_1 \neq t_2 = g(f_2)$, which shows that $g$ is injective.
-  From this it follows from Definition~4.1.4 that $\abs{\sab} \leq \abs{\seqab}$.
+  From this it follows from Definition~4.1.4 that $\abs{\sba} \leq \abs{\seqab}$.
   However, from what was shown above it follows that $\a \cdot \b$ is at most countable since $\a$ and $\b$ are.
-  Thus $\seqab$ is also at most countable by Exercise~4.2.4 and Theorem~4.3.10 so that $\sab$ must be at most countable since it was just shown that $\abs{\sab} \leq \abs{\seqab}$.
-  Lastly, since $\sab$ is equipotent to $\a^\b$ it follows that $\a^\b$ is at most countable as well. \qedsymbol
+  Thus $\seqab$ is also at most countable by Exercise~4.2.4 and Theorem~4.3.10 so that $\sba$ must be at most countable since it was just shown that $\abs{\sba} \leq \abs{\seqab}$.
+  Lastly, since $\sba$ is equipotent to $\a^\b$ it follows that $\a^\b$ is at most countable as well. \qedsymbol
 \end{solution}
 
 \def\ex{7.1.3}
@@ -215,7 +215,7 @@
         So it has to be that $\a < h(A)$ as desired. \qedsymbol
     }
 
-    \emph{Main Problem.}
+    \mainprob
 
 	We define a function $f : \pset{A \times A} \to h(A)$.
     So for any $R \in \pset{A \times A}$ clearly $R \ss A \times A$ so that $R$ is a relation on $A$.
@@ -263,7 +263,7 @@
         Note that this does not imply that $h(a) > \abs{A}$ without using the Axiom of Choice.
     }
 
-    \emph{Main Problem.}
+    \mainprob
     
 	Since we are only interested in the cardinalities of $A$ and $h(A)$ and their cardinal sum we can assume that they are disjoint.
     Clearly $f: A \to A \cup h(A)$ defined by $f(x) = x$ for $x \in A$ is an injective function so that $\abs{A} \leq \abs{A} + h(A)$ by the definition of cardinal addition.
@@ -345,7 +345,7 @@
         \qedsymbol
     }
 
-    \emph{Main Problem.}
+    \mainprob
 
     First we note that presumably $\hs(A)$ for a set $A$ is the least \emph{nonzero} ordinal $\a$ such that there is no function from $A$ onto $\a$.
     The fact that $\hs(A)$ is nonzero is important since, for a non-empty set $A$, there is no function from $A$ onto $\es = 0$ so that $0$ is actually the least ordinal such that such a function does not exist!
@@ -499,7 +499,7 @@
         Then we have $\abs{\b} = \abs{\W} = \abs{\w_\g} = \al_\g$ so that $\abs{\b} \leq \al_\g$ is true. \qedsymbol
     }
 
-    \emph{Main Problem.}
+    \mainprob
 
     This proof is similar to the proof of Theorem~7.2.1.
 
@@ -690,7 +690,7 @@
         $$
     }
 
-    \emph{Main Problem.}
+    \mainprob
 
     Consider any natural number $n > 0$ and any ordinal number $\a$.
     We then show that $n \cdot \al_\a = \al_\a$ by constructing a bijective $f: \w_\a \to n \times \w_\a$, which clearly shows the result by the definition of cardinal multiplication.
@@ -798,7 +798,6 @@
 \end{solution}
 
 \def\maxab{\max\parens{\abs{\a}, \abs{\b}}}
-\def\maxag{\max\parens{\abs{\a}, \abs{\g}}}
 \def\ex{7.2.4}
 \setcounter{itm}{0}
 \question{\ex}
@@ -915,73 +914,175 @@
         Thus we have shown that $f$ is bijective so that by the definition of cardinal multiplication we have $\abs{\a \cdot \b} = \abs{\a \times \b} = \abs{\a} \cdot \abs{\b}$ as desired. \qedsymbol
      }
 
-     The following lemmas are generalizations of the some of the theorems proved in section~4.3.
+     The following two lemmas are straightforward generalizations of Theorems~4.3.9 and 4.3.10, respectively.
 
-     \iffalse
-    \begin{statement}{Lemma~\ex.\itm{lem:orcarar:range}}
-        If $\angles{a_\g}_{\g < \a}$ is a transfinite sequence indexed by some ordinal $\a$ then the range of the sequence $A = \braces{a_\g}_{\g < \a}$ is at most $\abs{\a}$, i.e. $\abs{A} \leq \abs{\a}$.
-    \end{statement}
-    \proof{
-        We construct an injective $f: A \to \a$.
-        For any $a \in A$ consider the set $B = \braces{\g \in \a \where a_\g = a}$, noting that this is a nonempty set of ordinals since $A$ is the range of the sequence $\angles{a_\g}_{\g < \a}$.
-        It then follows that $B$ has a unique least element $\b$, so we set $f(a) = \b$.
+     \def\tfun{\bigcup_{\g < \a} A_\g}
+     \begin{statement}{Lemma~\ex.\itm{lem:orcarar:union}}
+        Consider a nonzero ordinals $\a$ and $\b$.
+        Let $\angles{A_\g \where \g < \a}$ be a (potentially transfinite) system of at most $\abs{\b}$ sets, and let $\angles{a_\g \where \g < \a}$ be a system of enumerations for $\angles{A_\g \where \g <\a}$, i.e., for each $\g < \a$, $a_\g = \angles{a_\g(\d) \where \d < \b}$ is a (potentially transfinite) sequence, and $A_\g = \braces{a_\g(\d) \where \d < \b}$.
+        Then $\tfun$ is at most $\abs{\a} \cdot \abs{\b}$.
+     \end{statement}
+     \proof{
+        We define a function $f : \a \times \b \to \tfun$ by simply setting $f(\g, \d) = a_\g(\d)$ for any $\g \in \a$ and $\d \in \b$.
+        We show that $f$ is onto by considering any $x \in \tfun$ so that there is an $\g < \a$ such that $x \in A_\g$.
+        Then, since $A_\g$ is the range of $a_\g$, there is a $\d < \b$ such that $a_\g(\d) = x$.
+        Hence $f(\g, \d) = a_\g(\d) = x$ so that $f$ is onto since $x$ was arbitrary.
 
-        To see that $f$ is injective, consider $a_1$ and $a_2$ in $A$ such that $f(a_1) = f(a_2)$.
-        By the definition of $f$ we then have that $a_1 = a_{f(a_1)} = a_{f(a_2)} = a_2$.
+        We also have that $\a \times \b$ is well-orderable by Theorem~6.5.8 (for example the lexicographic ordering has order type $\b \cdot \a$).
+        It then follows from Lemma~7.1.6.\ref{lem:hs:onto} that $\abs{\tfun} \leq \abs{\a \times b} = \abs{\a} \cdot \abs{\b}$ since $f$ is onto.
+        Hence $\tfun$ is at most $\abs{\a} \cdot \abs{\b}$ as desired. \qedsymbol
+     }
 
-        Hence, since $f$ is injective, we have by definition that $\abs{A} \leq \abs{\a}$. \qedsymbol
+     \begin{statement}{Lemma~\ex.\itm{lem:orcarar:seqinf}}
+        If $A$ is a set with cardinality $\al_\g$ for some ordinal $\g$, then the set $\Seq(A)$ of all finite sequences of elements of $A$ also has cardinality $\al_\g$.
+     \end{statement}
+     \proof{
+        Let $f$ be a bijection from $\w_\g$ to $A$.
+        We also know from Theorem~7.2.1 that $\abs{\w_\g \times \w_\g} = \al_\g \cdot \al_\g = \al_\g$, so let $g$ be a bijection from $\w_\g$ to $\w_\g \times \w_\g$.
+        For each $n < \w_0 = \w$ (i.e. $n \in \nats$) we define a transfinite enumeration $\angles{a_n(\a) \where \a < \w_\g}$ of $A^n$, where $A^n$ of course denotes the set of all sequences of elements of $A$ of length $n$.
+        We define these enumerations recursively.
+        Clearly for $n=0$ we have $A^n = A^0 = \braces{\es}$ so that we can set
+        \ali{
+            a_0(\a) &= \es \text{ for any $\a < \w_\g$} \\
+            a_1(\a) &= \angles{f(\a)} \text{ for any $\a < \w_\g$}
+        }
+        Then, having defined $a_n$, for any $\a < \w_\g$, we let $g(\a) = (\a_1, \a_2)$ and define the sequence $a_{n+1}(\a)$ of length $n$ as follows:
+        $$
+        a_{n+1}(\a)(k) = \begin{cases}
+            a_n(\a_1)(k) & k < n \\
+            f(\a_2) & k = n \,.
+        \end{cases}
+        $$
+        for any $k < n+1$.
+
+        Clearly each $a_n(\a)$ is a sequence of length $n$ for any $n < \w_0$ and $\a < \w_\g$, but we must show that $a_n$ is in fact an enumeration by showing that it is onto $A^n$ for all $n < \w_0$.
+        We show this by induction on $n$.
+        Obviously this is true for the trivial $n=0$ case and for the $n=1$ case as well since, for any sequence $\angles{a}$ of length 1 where $a \in A$, we have that there is a an $\a < \w_\g$ such that $f(\a) = a$ since $f$ is onto.
+        Hence by definition $a_1(\a) = \angles{f(\a)} = \angles{a}$ so that $a_1$ is onto.
+
+        Now suppose that $a_n$ is onto $A^n$ and consider any sequence $h \in A^{n+1}$.
+        Now, since $h \rest n$ is a sequence of length $n$ there is an $\a_1 < \w_\g$ such that $a_n(\a_1) = h \rest n$ by the induction hypothesis.
+        We also have $h(n) \in A$ so that there is an $\a_2 < \w_\g$ such that $f(\a_2) = h(n)$ since again $f$ is onto.
+        Now, clearly $(\a_1, \a_2) \in \w_\g \times \w_\g$ so that there is an $\a < \w_\g$ such that $g(\a) = (\a_1, \a_2)$ since $g$ is onto.
+        Now consider any $k < n+1$.
+        If $k < n$ then clearly we have $a_{n+1}(\a)(k) = a_n(\a_1)(k) = h(k)$ since $a_n(\a_1) = h \rest n$.
+        On the other hand, if $k = n$, then by definition $a_{n+1}(\a)(k) = f(\a_2) = h(n) = h(k)$.
+        Thus $a_{n+1}(\a) = h$ since $k$ was arbitrary and the cases are exhaustive.
+        This shows that $a_{n+1}$ is onto since $h$ was arbitrary, hence it is an enumeration.
+
+        Clearly we have that $\Seq(A) = \bigcup_{n < \w_0} A^n$ and, since we also have an transfinite enumeration (indexed by $\w_\g$) of each $A^n$ it follows from Lemma~\ex.\ref{lem:orcarar:union} that
+        $$
+        \abs{\Seq(A)} = \abs{\bigcup_{n < \w_0} A^n} \leq \abs{\w_0} \cdot \abs{\w_\g} = \al_0 \cdot \al_\g = \al_\g \,,
+        $$
+        where we have utilized Corollary~7.2.2 since $0 \leq \g$.
+        Also clearly $\al_\g \leq \abs{\Seq(A)}$ since, for example, the function $f: \w_\g \to \Seq(A)$ defined by $f(\a) = \angles{\a}$ (for any $\a < \w_\g$) is injective.
+        Thus by the Cantor-Bernstein Theorem we have $\abs{\Seq(A)} = \al_\g$ as desired. \qedsymbol
+     }
+
+     \begin{statement}{Corollary~\ex.\itm{cor:orcarar:seqfin}}
+        If $A$ is a nonempty finite set then the set $\Seq(A)$ of all finite sequences of elements of $A$ is countable.
+     \end{statement}
+     \proof{
+        First we note that clearly the set $B \cup \w$ is countable (since $B$ is finite and $\w$ is countable) so that $\Seq(A \cup \w)$ is also countable by Lemma~\ex.\ref{lem:orcarar:seqinf}.
+        Now let $f$ be a function from $\Seq(A)$ to $\Seq(A \cup \w)$ defined by the identity $f(g) = g$ for any sequence $g \in \Seq(A)$.
+        Note that $A \ss A \cup \w$ so that any sequence of elements of $A$ is a also a sequence with elements in $A \cup \w$.
+        Clearly $f$ is injective so that $\abs{\Seq(A)} \leq \abs{\Seq(A \cup \w)} = \al_0$.
+
+        Since $A$ is nonempty there is an $a \in A$.
+        For any $n < \w$ consider the finite sequence $g_n(k) = a$ for any $k < n$, which is clearly a sequence of length $n$ with elements in $A$.
+        Consider then the function $f$ from $\w$ to $\Seq(A)$ defined $f(n) = g_n$ for $n < \w$.
+        Clearly this is a injective function since, for any $n_1$ and $n_2$ in $\w$ where $n_1 \neq n_2$, we have that $f(n_1) = g_{n_1}$ and $f(n_2) = g_{n_2}$ are sequences of different lengths so cannot be equal.
+        Thus we have $\al_0 = \abs{\w} \leq \abs{\Seq(a)}$ as well so that $\abs{\Seq(A)} = \al_0$ by the Cantor-Bernstein Theorem. \qedsymbol
+     }
+
+     \def\afs{\squares{A}^{< \w}}
+     \def\nfs{\squares{\al_\a}^{< \w}}
+     \begin{statement}{Corollary~\ex.\itm{cor:orcarar:fss}}
+        This is a corollary to Exercise~7.2.3c.
+        Suppose that $A$ is a set such that $\abs{A} = \al_\a$ for some ordinal $\a$.
+        Let $\afs$ denote the set of all finite subsets of $A$.
+        Then $\abs{\afs} = \al_\a$.
+     \end{statement}
+     \proof{
+        First let $\nfs$ again denote the set of finite subsets of $\al_\a$.
+        Since $\abs{A} = \al_\a$ there is a bijective $f: A \to \al_\a$.
+        We then define $g : \afs \to \nfs$ by letting $g(B) = f[B]$ for any $B \in \afs$, noting that clearly $g(B) \ss \al_\a$ and $g(B)$ is finite so that $g(B) \in \nfs$.
+        We now show that $g$ is bijective.
+
+        First consider any $B_1$ and $B_2$ in $\afs$ where $g(B_1) = g(B_2)$.
+        Hence $f[B_1] = g(B_1) = g(B_2) = f[B_2]$.
+        So consider any $x \in B_1$ so that $f(x) \in f[B_1]$.
+        Then also $f(x) \in f[B_2]$ so that there is a $y \in B_2$ such that $f(y) = f(x)$.
+        But since $f$ is injective it has to be that $y = x$ so that $x = y \in B_2$.
+        Hence $B_1 \ss B_2$ since $x$ was arbitrary.
+        A similar argument shows that $B_2 \ss B_1$ as well so that $B_1 = B_2$.
+        This shows that $g$ is injective.
+
+        Now consider any $C \in \nfs$ and let $B = \inv{f}[C]$, noting that $\inv{f}$ is a bijective function since $f$ is.
+        We claim then that $g(B) = C$.
+        So consider any $y \in g(B) = f[B]$ so that there is a $x \in B$ such that $f(x) = y$.
+        Then we have $x \in \inv{f}[C]$ by the definition of $B$ so that there is a $z \in C$ such that $\inv{f}(z) = x$.
+        Hence $z = f(\inv{f}(z)) = f(x) = y$ so that $y = z \in C$.
+        Thus $g(B) \ss C$ since $y$ was arbitrary.
+        Now consider any $y \in C$ so that clearly $x =\inv{f}(y) \in \inv{f}[C] = B$ and also $f(x) = y$.
+        Hence clearly $y = f(x) \in f[B] = g(B)$ so that $C \ss g(B)$ since $y$ was arbitrary.
+        This shows that $g(B) = C$ so that $g$ is surjective since $C$ was arbitrary.
+
+        We have just shown that $g$ is bijective so that $\abs{\afs} = \abs{\nfs} = \al_\a$ by Exercise~7.2.3c. \qedsymbol
     }
-    \fi
 
-    \def\sun{\bigcup_{\b<\a} A_\b}
-    \begin{statement}{Lemma~\ex.\itm{lem:orcarar:union}}
-        Suppose $\g$ is an ordinal and $\angles{A_\b}_{\b < \a}$ is a system of sets indexed by nonzero ordinal $\a$ where $\abs{\a} \leq \al_\g$.
-        Also suppose that each set in the system is well-orderable and at most $\al_\g$.
-        Then $\sun$ is at most $\al_\g$ as well.
-    \end{statement}
-    \proof{
-        First, suppose that every set in the system is empty.
-        Then clearly $\sun$ is empty since, if there is an $x \in \sun$, then there is a $\b < \a$ where $x \in A_\b$, which contradicts the fact that $A_\b = \es$.
-        Hence clearly $\abs{\sun} = \abs{\es} = 0 < \al_\g$.
-
-        So we assume that at least one set in the system is non-empty and so that there exists an $a$ in that set.
-        Now, consider any $\b < \a$.
-        Then we clearly have  $\abs{A_\b} \leq \al_\g$.
-        Also, since $A_\b$ is well-orderable, it follow that there is an ordinal $\a_\b$ such that the elements of $A_\b$ can be written as a transfinite sequence $\angles{a_\d}_{\d < \a_\b}$.
-        It also follows that $\abs{\a_\b} \leq \al_\g$.
-    }
-
+    \def\bfs{\squares{\b}^{< \w}}
+    \def\sba{S(\b, \a)}
     \begin{statement}{Lemma~\ex.\itm{lem:orcarar:exp}}
         If $\a$ and $\b$ are ordinals where at least one is infinite then $\abs{\a^\b} \leq \maxab$.
     \end{statement}
     \proof{
-        Clearly $\maxab$ is an infinite cardinal since at least one of $\a$ or $\b$ is infinite.
-        First we show that $\maxab \cdot \abs{\a} = \maxab \cdot \abs{\b} = \maxab$.
-        We need only consider the case when $\abs{\a} \leq \abs{\b}$ since otherwise we apply can the same argument.
-        Hence $\abs{\b} = \al_\g$ for some ordinal $\g$ since $\b$ must be infinite, and $\maxab = \abs{\b} = \al_\g$.
-        We then clearly have $\maxab \cdot \abs{\b} = \al_\g \cdot \al_\g = \al_\g$ by Theorem~7.2.1.
-        If $\abs{\a} = n$ for some finite $n$ then clearly $\maxab \cdot \abs{\a} = \al_\g \cdot n = n \cdot \al_\g = \al_\g$ by Corollary~7.2.2.
-        Finally, if $\abs{\a}$ is infinite, then $\abs{\a} = \al_\d$ for some ordinal $\d$, and clearly $\d \leq \g$ since $\al_\d = \abs{\a} \leq \abs{\b} = \al_\g$.
-        We then have $\maxab \cdot \abs{\a} = \al_\g \cdot \al_\d = \al_\d \cdot \al_\g = \al_\g$ again by Corollary~7.2.2.
-        Hence we have shown that $\maxab \cdot \abs{\a} = \maxab \cdot \abs{\b} = \maxab$ since $\maxab = \al_\g$.
+        To show this we reference the representation of ordinal exponentiation discussed in Exercise~6.5.16.
+        In that exercise we showed that the set $S(\b,\a) = \braces{f \where f: \b \to \a \text{ and } s(f) \text{ is finite}}$, where $s(f) = \braces{\x < \b \where f(\x) \neq 0}$ for any $f: \b \to \a$, can be ordered to be isomorphic to $\a^\b$.
+        From this it clearly follows that $\abs{S(\b,\a)} = \abs{\a^\b}$.
 
-        Now we show the main result by transfinite induction.
-        First, for $\b = 0$ then it has be that $\a$ is infinite so that $\maxab = \abs{\a}$ is also infinite.
-        Then, clearly $\abs{\a^\b} = \abs{\a^0} = \abs{1} = 1 \leq \maxab$.
-        Now suppose that $\abs{\a^\b} \leq \maxab$.
-        Then we have
-        \ali{
-            \abs{\a^{\b+1}} &= \abs{\a^\b \cdot \a} & \text{(by the definition of ordinal exponentiation)} \\
-            &= \abs{\a^\b} \cdot \abs{\a} & \text{(by Lemma~\ex.\ref{lem:orcarar:mult})} \\
-            &\leq \maxab \cdot \abs{\a} & \text{(by the induction hypothesis and property (i) after Lemma~5.1.4)} \\
-            &= \maxab & \text{(by what was just shown above)} \,.
-        }
-        Now suppose that $\b$ is a nonzero limit ordinal and that $\abs{\a^\g} \leq \maxag$ for all $\g < \b$.
-        Then, for any $\g < \b$, clearly $\g \ss \b$ (since $\beta$ is transitive and $\g \in \b$ since $\g < \b$) so that $\abs{\g} \leq \abs{\b}$.
-        
+        We now construct an injective function $f$ from $\sba$ to $\bfs \times \Seq(\a)$, where $\bfs$ is the set of all finite subsets of $\b$ and $\Seq(\a)$ is the set of all finite sequences of elements of $\a$.
+        So consider any $g \in \sba$ so that $g: \b \to \a$ and $s(g)$ is a finite subset of $\b$.
+        Also clearly $s(g)$ is a finite set of ordinals so that there is a unique isomorphism $h$ from some natural number $n$ to $s(g)$.
+        Clearly then $g \circ h$ is a finite sequence from $n$ to $\a$.
+        Thus we have that $s(g) \in \bfs$ and $g \circ h \in \Seq(\a)$, so we set $f(g) = (s(g), g \circ h)$.
+
+        To see that this mapping is injective consider $g_1$ and $g_2$ in $\sba$ where $g_1 \neq g_2$.
+        Then there is some $\x < \b$ where $g_1(\x) \neq g_2(\x)$.
+        Let $h_1$ and $h_2$ be the isomorphisms from natural numbers $n_1$ and $n_2$ to $s(g_1)$ and $s(g_2)$, respectively, as described above.
+        If $s(g_1) \neq s(g_2)$ then clearly $f(g_1) = (s(g_1), g_1 \circ h_1) \neq (s(g_2), g_2 \circ h_2) = f(g_2)$.
+        So assume that $s(g_1) = s(g_2)$, from which it follows that $n_1 = n_2$ and $h_1 = h_2$.
+        Since $h_1 = h_2$ are bijections there is a $k \in n_1 = n_2$ such that $h_1(k) = h_2(k) = \x$, noting that it has to be that $\x \in s(g_1) = s(g_2)$ since otherwise we would have $g_1(\x) = 0 = g_2(\x)$.
+        We then have $(g_1 \circ h_1)(k) = g_1(h_1(k)) = g_1(\x) \neq g_2(\x) = g_2(h_2(k)) = (g_2 \circ h_2)(k)$ so that $g_1 \circ h_1 \neq g_2 \circ h_2$.
+        Thus once again $f(g_1) = (s(g_1), g_1 \circ h_1) \neq (s(g_2), g_2 \circ h_2) = f(g_2)$, which shows that $f$ is injective.
+
+        So since $f$ is injective it follows that $\abs{\a^\b} = \abs{\sba} \leq \abs{\bfs \times \Seq(\a)} = \abs{\bfs} \cdot \abs{\Seq(\a)}$.
+        Suppose first that $\abs{\a} \leq \abs{\b}$ so it has to be that $\b$ is infinite so that $\maxab = \abs{\b} = \al_\g$ for some ordinal $\g$.
+        Thus by Lemma~\ex.\ref{cor:orcarar:fss} we have $\abs{\bfs} = \al_\g$.
+        If $\a = 0 = \es$ then clearly $\Seq(\a) = \braces{\es}$ so that $\abs{\Seq(\a)} = 1$.
+        If $\a$ is finite but nonzero then it is nonempty so that $\abs{\Seq(\a)} = \al_0$ by Corollary~\ex.\ref{cor:orcarar:seqfin}.       Lastly, if $\a$ is infinite then $\abs{\a} = \al_\d$ for some $\d \leq \g$ since $\al_\d = \abs{\a} \leq \abs{\b} = \al_\g$.
+        Hence $\abs{\Seq(\a)} = \al_\g$ by Lemma~\ex.\ref{lem:orcarar:seqinf}.
+        Thus in all three cases $\k = \abs{\Seq(\a)}$ is either a natural number or $\al_\d$ for some $\d \leq \g$.
+        It then follows from Corollary~7.2.2 that
+        $$
+        \abs{\a^\b} \leq \abs{\bfs} \cdot \abs{\Seq(\a)} = \al_\g \cdot \k = \k \cdot \al_\g = \al_\g = \maxab \,.
+        $$
+        On the other hand if $\abs{\b} \leq \abs{\a}$ then it must be that $\a$ is infinite so that $\maxab = \abs{\a} = \al_\g$ for some ordinal $\g$.
+        Thus by Lemma~\ex.\ref{lem:orcarar:seqinf} we have $\abs{\Seq(\a)} = \al_\g$ as well.
+        If $\b$ is finite then clearly every subset of $\b$ is finite so that $\bfs = \pset{\b}$ is finite by Theorem~4.2.8.
+        Hence $\abs{\bfs} = n$ for some natural number $n$.
+        If $\b$ is infinite then $\abs{\b} = \al_\d$ for some $\d \leq \g$ since $\al_\d = \abs{\b} \leq \abs{\a} = \al_\g$.
+        We then have that $\abs{\bfs} = \al_\d$ as well by Lemma~\ex.\ref{cor:orcarar:fss}.
+        Hence in either case $\k = \abs{\bfs}$ is a natural number or $\al_\d$ for some $\d \leq \g$.
+        Hence we have
+        $$
+        \abs{\a^\b} \leq \abs{\bfs} \cdot \abs{\Seq(\a)} = \k \cdot \al_\g = \al_\g = \maxab
+        $$
+        again by Corollary~7.2.2.
+        Thus in all cases we have shown that $\abs{\a^\b} \leq \maxab$ as desired. \qedsymbol
     }
-    
-    \emph{Main Problem.}
+
+    \mainprob
 
     That $\abs{\a + \b} \leq \al_\g$ follows almost immediately from Lemma~\ex.\ref{lem:orcarar:add}.
     We have that $\abs{\a + \b} = \abs{\a} + \abs{\b} \leq \al_\g + \al_\g = \al_\g$, where we have also used property (c) of cardinal numbers after Lemma~5.1.2, and Corollary~7.2.3.
