--- a/errata.tex
+++ b/errata.tex
@@ -20,7 +20,8 @@
 \item Page 62, Exercise 5.4. The hint should read ``Let $h(x) = A - x$; \ldots'' instead of ``Let $h(x) = B - x$; \ldots''.
   (Confirmed by Dr. Jech)
 
-\item Page 101, Exercise 2.3. This is ambiguous and means that that the countable dense subset is dense in $P$ rather than simply dense with respect to itself. (Unconfirmed)
+\item Page 101, Exercise 2.3. This means that that the countable dense subset is dense in $P$ rather than simply dense with respect to itself.
+  This has to be the case because, if were merely dense with respect to itself, then \emph{any} larger linearly ordered set containing the subset would have the same property so that it is impossible to put a bound on the size of that set (Confirmed)
 
 \item Page 114, Exercise 3.5 part (c). This should read ``\ldots, then $f[A] \in V_\w$.'' instead of ``\ldots, then $f[X] \in V_\w$.'' since $X$ has not been previously defined. (Unconfirmed)
 
